Update styles.css - fixed alignment issue with services div

--- a/styles.css
+++ b/styles.css
@@ -502,7 +502,7 @@ h1 {
     }
   
     .services-container {
-        width: 90%;
+        width: 100%;
         height: 136px;
     }
 
